refactor: remove some sonar code smells